src/scss/modules/navs.scss
.navbar {
  position: fixed;
  z-index: 1000;
  top: 0;
  display: flex;
  width: 100vw;
  height: 8rem;
  align-items: center;
  justify-content: space-between;
  padding: 2rem 2.5rem;
  padding-left: 33.5rem;
  @include themed() {
    background-color: t($forward-background);
  }

  .navbar-end,
  .navbar-start {
    display: inline-flex;
    height: 100%;
    align-items: center;
  }

  .navbar-item {
    display: inline-flex;
    height: 100%;
    @include themed() {
      color: t($navbar-text);
    }
  }

  .navbar-item .icon i {
    color: inherit;
  }

  .dropdown {
    display: inline-flex;
    align-items: center;
  }
  .dropdown#profile {
    cursor: pointer;
    font-size: 1.6rem;
  }
  .dropdown#profile .icon {
    margin-left: 2rem;
    font-size: 1.8rem;
  }
}

.dropdown-list li {
  padding-bottom: 0.8rem;
  margin-bottom: 0.8rem;
  @include themed() {
    border-bottom: 0.2rem solid t($navbar-dropdown-separators);
  }

  &:last-child {
    padding-bottom: 0;
    border-bottom: 0;
    margin-bottom: 0;
  }

  &.unread ::before {
    display: inline-block;
    width: 0.7rem;
    height: 0.7rem;
    margin-right: 1rem;
    background-color: $blue;
    border-radius: 50%;
    content: '';
    vertical-align: middle;
  }

  &.read {
    color: #C4CADB;
  }
}

.tippy-box[data-theme~='default'] {
  width: 20rem;
  padding: 0.5rem;
  border-right: 0;
  box-shadow: 0 0 10px #00000029;
  font-size: 1.6rem;
  @include themed() {
    background-color: t($forward-background);
    color: t($navbar-text);
  }

  .tippy-svg-arrow {
    @include themed() {
      fill: t($forward-background);
    }
  }

  a {
    cursor: pointer;
  }

  li {
    display: flex;
    align-items: center;
  }

  li label {
    margin-left: 2rem;
  }
}

.navbar-separated .navbar-item:first-child {
  padding-right: 2rem;
  @include themed() {
    border-right: 0.2rem solid t($navbar-separators);
  }
}

.navbar-separated .navbar-item:last-child {
  padding-left: 2rem;
  border: 0 !important;
}

.navbar-separated .navbar-item {
  padding: 0 2rem;
  @include themed() {
    border-right: 0.2rem solid t($navbar-separators);
  }
}

.profile-image {
  width: 5rem;
  height: inherit;
  height: 5rem;
  margin-right: 1.5rem;
  border-radius: 50%;
}

.sidebar {
  position: fixed;

  z-index: 100;
  top: 0;
  left: 0;
  display: flex;
  width: 32rem;
  height: 100%;
  flex-direction: column;
  padding: 1rem;
  background: transparent linear-gradient(192deg, #506ef0 0%, #0826aa 100%) 0% 0% no-repeat padding-box;

  border-radius: 0 2.5rem 2.5rem 0;

  .brand {
    display: flex;
    width: 15rem;
    align-self: center;
    margin-top: 2rem;
  }
}

.sidebar-nav {
  margin-top: 3.5rem;

  font-size: 2rem;
  font-weight: 600;

  .nav-item {
    display: inline-flex;
    width: 100%;
    flex-wrap: wrap;
    align-items: center;
    padding: 1rem 0.5rem;
    font-size: 1.8rem;
  }
  .nav-item.is-active {
    background-color: rgba($white, 0.3);
    border-radius: 0.5rem;
  }
  .nav-item:last-child {
    margin-bottom: 0;
  }
  .nav-item .nav-link {
    width: 100%;
    align-items: center;
    color: $white;
    cursor: pointer;
    font-weight: 700;
  }
  .nav-item.is-collapse .nav-link {
    justify-content: space-between;
  }

  .nav-link {
    display: flex;
  }
  .nav-link .icon.is-large {
    margin-right: 1rem;
    color: inherit;
    font-size: 2.5rem;
  }
  .nav-item .icon i {
    color: inherit;
  }

  .icon.is-arrow {
    justify-self: end;
  }
}

.sub-menu {
  margin: 2rem 0 2rem 4rem;

  &.is-hidden {
    visibility: hidden;
  }

  .sub-item {
    margin-bottom: 2rem;
  }
  .sub-item a {
    color: rgba($white, 0.6);
    font-size: 1.6rem;
    font-weight: 400;
  }
}

